--- a/DanceMS/DanceMS.iOS/DanceMS.iOS.csproj
+++ b/DanceMS/DanceMS.iOS/DanceMS.iOS.csproj
@@ -152,6 +152,9 @@
     <PackageReference Include="Microsoft.Azure.Mobile.Client">
       <Version>4.1.1</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Auth">
+      <Version>1.6.0.4</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
   <ItemGroup />
